--- a/index.html
+++ b/index.html
@@ -135,15 +135,16 @@
 <section>
 <h2>Отзывы читателей</h2>
 
-<p>«Лена: Мы ужасно хохотали над Бабкой Ёжкой...</p>
+<p><b>«Лена: Мы ужасно хохотали над Бабкой Ёжкой...»</b></p>
 <img src="zhihorka_kot.png" class="section-img">
 
-<p>«Юра: Окунулся в снег, в детство, дочитал уже сам — со слезами на глазах...»</p>
+<p><b>«Юра: Окунулся в снег, в детство...»</b></p>
 <img src="petrunja2.png.webp" class="section-img">
 
-<p>«Диана: Здорово, есть что вспомнить по ходу чтения и рассказать детям о своем детстве. </p>
+<p><b>«Диана: Здорово, есть что вспомнить...»</b></p>
 <img src="spuren.webp" class="section-img">
-<!-- VG WORT Pixel -->
+
+<!-- VG WORT Pixel — jetzt korrekt platziert -->
 <img 
   src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
   width="1"
@@ -151,6 +152,7 @@
   alt=""
 >
 </section>
+
     <section id="review-help" style="max-width:700px;margin:40px auto;text-align:center;">
     <h2>Понравились приключения? Напишите короткий отзыв в Apple Books</h2>
     <p>Отзыв занимает всего 30 секунд и очень помогает книге находить новых читателей 💛</p>
