--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
         </a>
 <a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
-   class="banner-btn donate-btn"
+   class="btn donate-btn"
    target="_blank">
     ❤️ Поддержать донатом новые книги
 </a>
+
 
 <a href="#" class="btn" style="display:none;">
     <img class="icon" src="https://simpleicons.org/icons/instagram.svg">Instagram
