--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+<a href="/" class="logo-link">
+    <img src="logo-retcon.webp" alt="Retcon Publish Logo" class="site-logo">
+</a>
 
 <header class="winter-banner">
 
