--- a/kontakt.html
+++ b/kontakt.html
@@ -66,22 +66,22 @@ a.back {
 </head>
 
 <body>
-<h1>Kontakt</h1>
+<h1>Отправьте Ваше сообщение команде RETCON</h1>
 
 <form action="mailto:info@retcon-publish.com" method="POST" enctype="text/plain">
-    <label>Ihr Name:</label>
+    <label>Ваше имя:</label>
     <input type="text" name="Name" required>
 
-    <label>Ihre E-Mail:</label>
+    <label>Ваш E-Mail:</label>
     <input type="email" name="Email" required>
 
-    <label>Nachricht:</label>
+    <label>Сообщение:</label>
     <textarea name="Nachricht" rows="5" required></textarea>
 
-    <button type="submit">Nachricht senden</button>
+    <button type="submit">Отправить</button>
 </form>
 
-<a class="back" href="index.html">← Zurück zur Startseite</a>
+<a class="back" href="index.html">← Вернуться на страницу</a>
 
 </body>
 </html>
