--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <br><br>
     <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
     <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
+      <a href="kontakt.html" style="color:#0a1f4a;">Kontakt</a>
 </footer>
     <div class="snow-container"></div>
 <script>
