--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 </a>
 
 <p>
-Хотите ностальгировать и мечтать вместе с вашими детьми?  
+Хотите поностальгировать и помечтать вместе с вашими детьми?  
 Читайте им вслух про новогодние приключения Дениски и его друзей!  
-Эта история не просто для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
-Чтение о приключениях десятилетних ребят — это возможность вернуться в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
+Эта история не только для детей — она для всех, кто готов вновь ощутить себя ребёнком, верящим в чудеса.  
+Читайте и возвращайтесь в своё собственное детство, когда между волшебством и реальностью были стерты грани и верилось, что в ручье у Площанихи живет русалка.  
 Эта история о дружбе, поддержке и о том, как важно оставаться верным себе.  
 </p>
 </section>
@@ -101,9 +101,9 @@
     <img src="authorfoto1.jpg.webp" class="author-photo">
 </div>
 
-Василиса Сабашникова родом из Нижнего Новгорода, Россия. Способность рассказывать истории она унаследовала от прабабушки Ольги Сергеевны, которую называли «Чехов в юбке».  
+Василиса Сабашникова родом из Нижнего Новгорода. Способность рассказывать истории она унаследовала от прабабушки Ольги Сергеевны, которую в тесном семейном кругу называли «Чехов в юбке».  
 Василиса живет в Германии и пишет для взрослых и детей.  
-В 2006 году стала финалистом Национальной детской литературной премии "Заветная Мечта".  
+В 2006 году с книжкой под рабочим названием "Дениска и Команда Лейбентим" получила номинацию на Национальную детскую литературной премию "Заветная Мечта".  
 В 2007 году — номинирована на Европейском фестивале в Санкт-Петербурге.
 
 <img 
@@ -142,10 +142,10 @@
 <p><b>«Лена: Мы ужасно хохотали над Бабкой Ёжкой...»</b></p>
 <img src="zhihorka_kot.png" class="section-img">
 
-<p><b>«Юра: Окунулся в снег, в детство...»</b></p>
+<p><b>«Юра: Окунулся в снег, в детство, дочитал уже сам, когда дети уснули.»</b></p>
 <img src="petrunja2.png.webp" class="section-img">
 
-<p><b>«Диана: Здорово, есть что вспомнить...»</b></p>
+<p><b>«Диана: Здорово, есть что вспомнить по ходу чтения из собственных детских переживаний и рассказать детям, как было у нас.»</b></p>
 <img src="spuren.webp" class="section-img">
 
 <!-- VG WORT Pixel — jetzt korrekt platziert -->
@@ -159,7 +159,7 @@
 
     <section id="review-help" style="max-width:700px;margin:40px auto;text-align:center;">
     <h2>Понравились приключения? Напишите короткий отзыв в Apple Books</h2>
-    <p>Отзыв занимает всего 30 секунд и очень помогает книге находить новых читателей 💛</p>
+    <p>Отзыв занимает всего ничего и очень помогает книге находить новых читателей 💛</p>
 
     <ol style="text-align:left;max-width:500px;margin:20px auto;font-size:20px;line-height:1.5;">
         <li>Откройте приложение <strong>Apple Books</strong> на iPhone, iPad или Mac</li>
