--- a/index.html
+++ b/index.html
@@ -181,9 +181,10 @@
 <footer style="text-align:center; padding:40px 20px; color:#0a1f4a; font-size:18px;">
     © 2024 Vasilysa Sabashnikova — Все права защищены
     <br><br>
-    <a href="#impressum" style="color:#0a1f4a; margin-right:20px;">Impressum</a>
-    <a href="#datenschutz" style="color:#0a1f4a;">Datenschutz</a>
-      <a href="kontakt.html" style="color:#0a1f4a;">Kontakt</a>
+  
+    <a href="impressum.html">Impressum</a>
+    <a href="datenschutz.html">Datenschutz</a>
+    <a href="mailto:retcon-publish@posteo.de">Kontakt</a>
 </footer>
     <div class="snow-container"></div>
 <script>
