--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   
     <a href="impressum.html">Impressum</a>
     <a href="datenschutz.html">Datenschutz</a>
-    <a href="mailto:retcon-publish@posteo.de">Kontakt</a>
+   <a href="/kontakt.html">Контакт</a>
 </footer>
     <div class="snow-container"></div>
 <script>
