--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   
     <a href="impressum.html">Impressum</a>
     <a href="datenschutz.html">Datenschutz</a>
-   <a href="/kontakt.html">Контакт</a>
+   <a href="kontakt.html">Kontakt</a>
 </footer>
     <div class="snow-container"></div>
 <script>
