--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 
 <header class="winter-banner">
 
-    <!-- Blaues Feld oben rechts -->
-    <div class="top-note">
-        для совместного чтения<br>
-        с детьми 8–11 лет
-    </div>
-
   <!-- Titel -->
     <h1 class="banner-title">Тайна Шерстяного Носка</h1>
 
     <!-- Untertitel -->
     <h1 class="subtitle">Зима</h1>
 
+    <!-- Neuer Untertitel h3 -->
+<h3 class="subtitle-small">
+    для совместного чтения<br>
+    с детьми 8–11 лет
+</h3>
     
     <!-- Кнопки -->
     <div class="buttons">
