--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
     <!-- Neuer Untertitel h3 -->
 <h3 class="subtitle-small">
-    для совместного чтения<br>
-    с детьми 8–11 лет
+    для совместного чтения с детьми 8–11 лет
 </h3>
     
     <!-- Кнопки -->
