--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     Сказка для совместного чтения с детьми 8–11 лет
 </h3>
     
-    <!-- Кнопки -->
-    <div class="buttons">
+   <!-- Кнопки -->
+<div class="buttons">
 
     <a href="https://t.me/secret_woolen_sock" class="btn">
         <img class="icon" src="https://simpleicons.org/icons/telegram.svg">❤️Telegram
@@ -46,24 +46,24 @@
         <img class="icon" src="https://simpleicons.org/icons/bookstack.svg">❤️Купить eBook
     </a>
 
-    <!-- Instagram wird sichtbar -->
     <a href="https://www.instagram.com" class="btn">
         <img class="icon" src="https://simpleicons.org/icons/instagram.svg">❤️Instagram
     </a>
-        
- <!-- Facebook wird versteckt -->
+
+    <!-- Facebook bleibt unsichtbar -->
     <a href="https://www.facebook.com/profile.php?id=61584501591753" class="btn" style="display:none;">
         <img class="icon" src="https://simpleicons.org/icons/facebook.svg">Facebook
     </a>
+
+    <!-- Donate-Button jetzt im selben Container -->
+    <a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
+       class="btn donate-btn"
+       target="_blank">
+        ❤️ Поддержать донатом новые книги
+    </a>
+
 </div> <!-- /buttons -->
 
-<!-- Donate-Button AUS dem Flex-Container separat darunter -->
-<a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
-   class="btn donate-btn"
-   target="_blank"
-   style="display:block; margin:25px auto 0; width:fit-content; text-align:center;">
-    ❤️ Поддержать донатом новые книги
-</a>
 
 </header>
 
