--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 <div class="buttons">
 
     <a href="https://t.me/secret_woolen_sock" class="btn">
-        <img class="icon" src="https://simpleicons.org/icons/telegram.svg">❤️Telegram
+        <img class="icon" src="https://simpleicons.org/icons/telegram.svg"><span class="heart">❤️</span>Telegram
     </a>
 
     <a href="https://www.youtube.com/channel/UC3Wj9z_mYC45_hBoxne0oww" class="btn">
-        <img class="icon" src="https://simpleicons.org/icons/youtube.svg">❤️YouTube
+        <img class="icon" src="https://simpleicons.org/icons/youtube.svg"><span class="heart">❤️</span>YouTube
     </a>
 
     <a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn">
-        <img class="icon" src="https://simpleicons.org/icons/bookstack.svg">❤️Купить eBook
+        <img class="icon" src="https://simpleicons.org/icons/bookstack.svg"><span class="heart">❤️</span>Купить eBook
     </a>
 
     <a href="https://www.instagram.com" class="btn">
-        <img class="icon" src="https://simpleicons.org/icons/instagram.svg">❤️Instagram
+        <img class="icon" src="https://simpleicons.org/icons/instagram.svg"><span class="heart">❤️</span>Instagram
     </a>
 
     <!-- Facebook bleibt unsichtbar -->
@@ -59,7 +59,7 @@
     <a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
        class="btn donate-btn"
        target="_blank">
-        ❤️ Поддержать донатом новые книги
+        <span class="heart">❤️</span> Поддержать донатом новые книги
     </a>
 
 </div> <!-- /buttons -->
