--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </a>
 
     <a href="https://books.apple.com/de/book/%D1%82%D0%B0%D0%B9%D0%BD%D0%B0-%D1%88%D0%B5%D1%80%D1%81%D1%82%D1%8F%D0%BD%D0%BE%D0%B3%D0%BE-%D0%BD%D0%BE%D1%81%D0%BA%D0%B0-%D0%B7%D0%B8%D0%BC%D0%B0/id6449406162" class="btn">
-        <img class="icon" src="https://simpleicons.org/icons/bookstack.svg"><span class="heart">🧡</span>Купить eBook
+        <img class="icon" src="https://simpleicons.org/icons/bookstack.svg"><span class="heart">💛</span>Купить eBook
     </a>
 
     <a href="https://www.instagram.com" class="btn">
@@ -59,7 +59,7 @@
     <a href="https://www.paypal.com/donate?hosted_button_id=Q5L5HP6HW3Q5L"
        class="btn donate-btn"
        target="_blank">
-        <span class="heart">🧡</span> Поддержать донатом новые книги
+        <span class="heart">💛</span> Поддержать донатом новые книги
     </a>
 
 </div> <!-- /buttons -->
