--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 
 </div> <!-- /buttons -->
 
+<!-- großer NEWS Button -->
+<div class="news-big-button">
+    <a href="news.html">
+        <img src="IMG_3149.jpg" alt="News & Blog">
+        <span>НОВОСТИ и СТАРОСТИ</span>
+    </a>
+</div>
 
 </header>
 
