--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <!-- großer NEWS Button -->
 <div class="news-big-button">
     <a href="news.html">
-        <img src="IMG_3149.jpg" alt="ПОДЬ СЮДЫ!">
-       // <span>НОВОСТИ и СТАРОСТИ</span>
+        <img src="IMG_3149.jpg" alt="подь сюды!">
+    
     </a>
 </div>
 
