--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!-- großer NEWS Button -->
 <div class="news-big-button">
     <a href="news.html">
-        <img src="IMG_3149.jpg" alt="подь сюды!">
+        <img src="IMG_3149.jpeg" alt="подь сюды!">
     
     </a>
 </div>
