Update and rename post1 to post1.html

--- a/post1.html
+++ b/post1.html
@@ -114,7 +114,11 @@
         </div>
 
         <!-- ⭐ VG WORT Pixel – unbedingt ersetzen! -->
-        <img src="https://vgwort.de/na/DEIN_PIXEL_ID" width="1" height="1" alt="">
+        <img src="https://vg09.met.vgwort.de/na/62e0a0e45c40475d8463d6174f86ff058915ec3a7c834ea5b7725006007657b6"
+  width="1"
+  height="1"
+  alt=""
+>
 
         <!-- 🔙 Zurück zum Blog -->
         <div class="back">
