--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
 
 </div> <!-- /buttons -->
 
-<!-- großer NEWS Button -->
 <div class="news-big-button">
     <a href="news.html">
-        <img src="IMG_3149.jpeg" alt="подь сюды!">
-    
+        <img src="IMG_3149.jpeg" class="news-img-button">
     </a>
 </div>
+
 
 </header>
 
