--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 
 </div> <!-- /buttons -->
 
+<!-- großer NEWS Button mit Bild -->
 <div class="news-big-button">
     <a href="news.html">
-        <img src="IMG_3149.jpeg" class="news-img-button">
+        <img src="IMG_3149.jpeg" alt="Новости" class="news-image-button">
     </a>
 </div>
 
