--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
 <!-- großer NEWS Button mit Bild -->
 <div class="news-big-button">
+    <div class="news-text">подь сюды</div>
     <a href="news.html">
         <img src="IMG_3149.jpeg" alt="Новости" class="news-image-button">
     </a>
