--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
 
 <!-- großer NEWS Button mit Bild -->
 <div class="news-big-button">
-    <div class="news-text">подь сюды</div>
-    <a href="news.html">
+    <a href="news.html" class="news-image-wrapper">
         <img src="IMG_3149.jpeg" alt="Новости" class="news-image-button">
+        <span class="news-caption">подь сюды</span>
     </a>
 </div>
+
 
 
 </header>
