--- a/news.html
+++ b/news.html
@@ -8,15 +8,15 @@
         body {
             margin: 0;
             padding: 0;
-            background: #dcd6ff; /* Lavendel */
+            background:  #e6f4ff; 
             font-family: "Marck Script", cursive;
-            color: #0a1f4a;
+            color: #e6f4ff;
             font-size: 22px;
             line-height: 1.6;
         }
 
         h1, h2, h3 {
-            color: #0d1540;
+            color: #E94E1B;
         }
 
         /* Hauptcontainer */
@@ -65,14 +65,14 @@
         }
 
         .post-preview a {
-            color: #0d1540;
+            color: #e6f4ff;
             font-weight: bold;
             text-decoration: underline;
         }
 
         hr {
             border: none;
-            border-top: 2px solid #0d1540;
+            border-top: 2px solid #E94E1B;
             opacity: 0.4;
             margin: 40px 0 20px 0;
         }
@@ -124,13 +124,13 @@
     <h3>2025</h3>
     <ul>
         <li><a href="post1.html">Post 1 – Не нужен идиот?…</a></li>
-        <li><a href="post2.html">Post 2 – (kommt später)</a></li>
-        <li><a href="post3.html">Post 3 – (kommt später)</a></li>
+        <li><a href="post2.html">Post 2 – Пусто -выросла капуста!</a></li>
+        <li><a href="post3.html">Post 3 – На нет и суда нет!</a></li>
     </ul>
 
-    <h3>2024</h3>
+    <h3>2025</h3>
     <ul>
-        <li><a href="#">(Hier kannst du ältere Texte hinzufügen)</a></li>
+        <li><a href="#">Тексты старенькие</a></li>
     </ul>
 
 </div>
