--- a/news.html
+++ b/news.html
@@ -8,9 +8,14 @@
         body {
             margin: 0;
             padding: 0;
-            background:  #e6f4ff; 
+           background: linear-gradient(
+    180deg,
+    #c9c6ff 0%,   
+    #dfe3ff 40%,  
+    #f4f7ff 100%  
+);
             font-family: "Marck Script", cursive;
-            color: #e6f4ff;
+            color: #0d1540;
             font-size: 22px;
             line-height: 1.6;
         }
