--- a/news.html
+++ b/news.html
@@ -29,7 +29,13 @@
             max-width: 900px;
             margin: 40px auto;
             padding: 30px;
-            background: rgba(255,255,255,0.8);
+            background: linear-gradient(
+    180deg,
+    #0a0f3c 0%,      /* ← Nachtblau */
+    #dfe3ff 40%,
+    #f4f7ff 100%
+);
+
             border-radius: 20px;
             position: relative;
             border: 15px solid transparent;
@@ -70,7 +76,7 @@
         }
 
         .post-preview a {
-            color: #e6f4ff;
+            color:#0d1540;
             font-weight: bold;
             text-decoration: underline;
         }
