--- a/news.html
+++ b/news.html
@@ -48,13 +48,14 @@
             position: absolute;
             inset: -15px;
             border-radius: 30px;
-           background: linear-gradient(
-    135deg,
-    #FFD56A,
-    #E9A63A,
-    #F6C667
-);
-            filter: blur(2px) brightness(1.3);
+           background: white; /* чистый снег */
+    
+    /* сильное снежное свечение */
+    box-shadow:
+        0 0 30px rgba(255,255,255,0.9),
+        0 0 60px rgba(255,255,255,0.7),
+        0 0 90px rgba(255,255,255,0.5);
+
             z-index: -1;
         }
 
