--- a/news.html
+++ b/news.html
@@ -22,6 +22,8 @@
 
         h1, h2, h3 {
             color: #E94E1B;
+            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+
         }
 
         /* Hauptcontainer */
@@ -70,16 +72,22 @@
 
         .post-preview h3 {
             margin-top: 0;
+            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+
         }
 
         .post-preview p {
             margin-bottom: 10px;
+            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+
         }
 
         .post-preview a {
             color:#0d1540;
             font-weight: bold;
             text-decoration: underline;
+            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+
         }
 
         hr {
@@ -87,6 +95,8 @@
             border-top: 2px solid #E94E1B;
             opacity: 0.4;
             margin: 40px 0 20px 0;
+            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+
         }
     </style>
 
