--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
 
         h1, h2, h3 {
             color: #E94E1B;
-            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+           text-shadow: 2px 2px 4px #3d1f0f; /* dunkler brauner Schatten */
 
         }
 
@@ -72,13 +72,13 @@
 
         .post-preview h3 {
             margin-top: 0;
-            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+           text-shadow: 2px 2px 4px #3d1f0f; /* dunkler brauner Schatten */
 
         }
 
         .post-preview p {
             margin-bottom: 10px;
-            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+           text-shadow: 2px 2px 4px #3d1f0f; /* dunkler brauner Schatten */
 
         }
 
@@ -95,7 +95,7 @@
             border-top: 2px solid #E94E1B;
             opacity: 0.4;
             margin: 40px 0 20px 0;
-            text-shadow: 0 0 8px rgba(255,255,255,0.9);
+           text-shadow: 2px 2px 4px #3d1f0f; /* dunkler brauner Schatten */
 
         }
     </style>
