--- a/post1.html
+++ b/post1.html
@@ -82,34 +82,30 @@
 
             <!-- 📖 DEIN TEXT -->
             <p>
-                В 90-е по подъездам ходил мужик, звонил в двери, показывал в глазок книжку и спрашивал:
+                Помню анекдот. В 90-е по подъездам ходил мужик, звонил в двери, показывал в глазок книжку и спрашивал:
 — «Идиот не нужен?»
 А из-за двери ему отвечали:
 — «Нет, своих хватает!»
 
-Иногда думаю: если бы я тогда ходила с рукописью, услышала бы то же самое:
-«Сказки не нужно? У нас своих хватает…»
-Но, зная себя, я всё равно сказала бы:
-берите. Не пожалеете.
+Иногда думаю: вот так и я вылезаю на простор интернета с моей рукописью и в ответ:
+«Сказки? У нас своих хватает… И чем дельше, тем страшнее...»
+Но я все равно берите.! Читайте! Вспоминайте! Не пожалеете.
 
-Потому что мои сказки выросли из тех зим, которые трудно спутать с другими. Из тех долгих, тёмных вечеров, когда света в квартире едва хватало, а мир за окном казался огромным, ледяным и чуть-чуть волшебным. Когда безденежье было таким же привычным, как морозный воздух, а радостью становились горячий чай, запах мандариновой корки и случайно найденная в кармане карамелька.
+Потому что мои сказки выросли из тех зим, которые трудно спутать с другими. Из тех долгих, тёмных вечеров, когда в квартире было тепло при открытой форточке, а мир за окном казался огромным, ледяным и волшебным. Когда скрип под ногами был таким же привычным, как морозный воздух, а радостью становились горячий чай, запах мандариновой корки и случайно найденная в кармашке слипшаяся карамелька.
 
-Я помню сугробы, которые стояли стеной вдоль дороги — высокие, как крепости, и такие чистые, что хотелось нырнуть в них головой. Помню хруст снега под сапогами, когда мороз щипал за щёки так яростно, что даже дыхание казалось прозрачным. Помню, как по пути домой мы проходили под старыми жёлтыми фонарями, и снег под ними сверкал, как россыпь стеклянных искр. Достаточно было поднять голову — и казалось, что мир вот-вот откроет свою тайну.
+Я помню свеже наметенные сугробы, которые выростали стеной вдоль дороги — высокие, как крепости, и такие пушистые, что хотелось нырнуть в них головой. Помню похрустывание под валенками, скованные губы на морозе и белое дыхание из под шарфа. Помню, как по пути домой мы проходили под старыми жёлтыми фонарями, и снег под ними сверкал, как россыпь янтарных бус. Достаточно было поднять голову к темному звездному небу — и, казалось, что мир вот-вот откроет свою тайну.
 
-В такие вечера чудо становилось единственной валютой, которой действительно хватало на всех. Мы искали его в каждом тёмном подъезде, в треске льда, в запахе старых книг, где страницы слегка шуршали, будто шептали что-то своё. И, наверное, именно тогда я впервые поняла, что настоящая сказка живёт рядом — тихая, упрямая, готовая проявиться в самый неожиданный момент.
+В такие вечера чудо приходило к нам и его хватало на всех. Оно таилось в заснеженном парке университетского городка на пропекте Гагарина, в мутном блеске разьезженной ледяной дорожке, в запахе старых книг, чьи надорванные страницы слегка шуршали, будто что-то шептали  своё. И, наверное, именно тогда я впервые поняла, что настоящая сказка будет жить со мной вечно — тихо в душе и готовая проявиться в самый неожиданный момент.
 
-Поэтому я пишу. Пишу про снег, домовых, детство и про мальчика, который однажды встретил настоящее чудо.
-А его, как и идиотов, много не бывает. 😄
+Поэтому я пишу, чтобы дать ей больше места. Пишу про снег, домовых, детство и про детей, которые однажды открыли настоящее волшебство. 
+А его, как известно, много не бывает. 😄
 
-✨ Какие зимние воспоминания живут с вами до сих пор?
+А какие зимние воспоминания живут с вами до сих пор? Поделитесь с детьми, да и с мной, если хотите. 
             </p>
 
             <!-- 🖼️ BILD DES POSTS -->
             <img src="papin_domovoj.png" alt="Beitragsbild">
 
-            <p>
-                Und weiterer Text … so viel du möchtest.
-            </p>
 
         </div>
 
@@ -122,7 +118,7 @@
 
         <!-- 🔙 Zurück zum Blog -->
         <div class="back">
-            <a href="news.html">← Zurück zu allen News</a>
+            <a href="news.html"><-перейти к новостям</a>
         </div>
 
     </div>
