--- a/post1.html
+++ b/post1.html
@@ -82,25 +82,25 @@
 
             <!-- 📖 DEIN TEXT -->
             <p>
-                Помню анекдот. В 90-е по подъездам ходил мужик, звонил в двери, показывал в глазок книжку и спрашивал:
+                Помню анекдот. <p>В 90-е по подъездам ходил мужик, звонил в двери, показывал в глазок книжку и спрашивал:</p>
 — «Идиот не нужен?»
 А из-за двери ему отвечали:
 — «Нет, своих хватает!»
 
-Иногда думаю: вот так и я вылезаю на простор интернета с моей рукописью и в ответ:
+<p>Иногда думаю: вот так и я вылезаю на простор интернета с моей рукописью и в ответ:
 «Сказки? У нас своих хватает… И чем дельше, тем страшнее...»
-Но я все равно берите.! Читайте! Вспоминайте! Не пожалеете.
+Но я все равно берите.! Читайте! Вспоминайте! Не пожалеете.</p>
 
-Потому что мои сказки выросли из тех зим, которые трудно спутать с другими. Из тех долгих, тёмных вечеров, когда в квартире было тепло при открытой форточке, а мир за окном казался огромным, ледяным и волшебным. Когда скрип под ногами был таким же привычным, как морозный воздух, а радостью становились горячий чай, запах мандариновой корки и случайно найденная в кармашке слипшаяся карамелька.
+<p>Потому что мои сказки выросли из тех зим, которые трудно спутать с другими. </p> Из тех долгих, тёмных вечеров, когда в квартире было тепло при открытой форточке, а мир за окном казался огромным, ледяным и волшебным. Когда скрип под ногами был таким же привычным, как морозный воздух, а радостью становились горячий чай, запах мандариновой корки и случайно найденная в кармашке слипшаяся карамелька.</p>
 
-Я помню свеже наметенные сугробы, которые выростали стеной вдоль дороги — высокие, как крепости, и такие пушистые, что хотелось нырнуть в них головой. Помню похрустывание под валенками, скованные губы на морозе и белое дыхание из под шарфа. Помню, как по пути домой мы проходили под старыми жёлтыми фонарями, и снег под ними сверкал, как россыпь янтарных бус. Достаточно было поднять голову к темному звездному небу — и, казалось, что мир вот-вот откроет свою тайну.
+<p>Я помню свеже наметенные сугробы, которые выростали стеной вдоль дороги — высокие, как крепости, и такие пушистые, что хотелось нырнуть в них головой. Помню похрустывание под валенками, скованные губы на морозе и белое дыхание из под шарфа. Помню, как по пути домой мы проходили под старыми жёлтыми фонарями, и снег под ними сверкал, как россыпь янтарных бус. Достаточно было поднять голову к темному звездному небу — и, казалось, что мир вот-вот откроет свою тайну.</p>
 
-В такие вечера чудо приходило к нам и его хватало на всех. Оно таилось в заснеженном парке университетского городка на пропекте Гагарина, в мутном блеске разьезженной ледяной дорожке, в запахе старых книг, чьи надорванные страницы слегка шуршали, будто что-то шептали  своё. И, наверное, именно тогда я впервые поняла, что настоящая сказка будет жить со мной вечно — тихо в душе и готовая проявиться в самый неожиданный момент.
+<p>В такие вечера чудо приходило к нам и его хватало на всех. Оно таилось в заснеженном парке университетского городка на пропекте Гагарина, в мутном блеске разьезженной ледяной дорожке, в запахе старых книг, чьи надорванные страницы слегка шуршали, будто что-то шептали  своё. И, наверное, именно тогда я впервые поняла, что настоящая сказка будет жить со мной вечно — тихо в душе и готовая проявиться в самый неожиданный момент.</p>
 
-Поэтому я пишу, чтобы дать ей больше места. Пишу про снег, домовых, детство и про детей, которые однажды открыли настоящее волшебство. 
-А его, как известно, много не бывает. 😄
+<p>Поэтому я пишу, чтобы дать ей больше места. Пишу про снег, домовых, детство и про детей, которые однажды открыли настоящее волшебство. 
+А его, как известно, много не бывает. 😄</p>
 
-А какие зимние воспоминания живут с вами до сих пор? Поделитесь с детьми, да и с мной, если хотите. 
+<p>А какие зимние воспоминания живут с вами до сих пор? Поделитесь с детьми, да и с мной, если хотите. </p>
             </p>
 
             <!-- 🖼️ BILD DES POSTS -->
