--- a/post1.html
+++ b/post1.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background: #dcd6ff; /* Lavendel */
-            font-family: "Marck Script", cursive;
+            font-family: "Marck Script";
             color: #0a1f4a;
             font-size: 22px;
             line-height: 1.6;
