--- a/post1.html
+++ b/post1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZНовости Retcon Publish</title>
+    <title>Новости Retcon Publish</title>
 
     <style>
         body {
